--- a/Research/Code.htm
+++ b/Research/Code.htm
@@ -56,8 +56,8 @@
   <div class="container nav-inner">
     <div class="brand">Yap Lab</div>
     <div class="menu">
-      <a class="backlink" href="/YapLab.htm">← Back to Main Page</a>
-      <a href="/YapLab.htm#research">Our Research</a>
+      <a class="backlink" href="/index.html">← Back to Main Page</a>
+      <a href="/index.html#research">Our Research</a>
     </div>
   </div>
 </div>
