--- a/Research/research-1-1(Research_DeepLearningImageProcessing).htm
+++ b/Research/research-1-1(Research_DeepLearningImageProcessing).htm
@@ -87,7 +87,7 @@
     <div class="brand">Yap Lab</div>
     <div class="menu">
       <!-- Back to the main site; useful breadcrumb for deep-dive pages -->
-      <a class="backlink" href="/YapLab.htm">← Back to Main Page</a>
+      <a class="backlink" href="/index.html">← Back to Main Page</a>
       <!-- In-page anchor links for quick jumping to each technique section -->
       <a href="#CNN">CNN</a>
       <a href="#FA">Feedback Attention</a>
