--- a/Research/research-1-3(Machine_Learning_Biomechanics).htm
+++ b/Research/research-1-3(Machine_Learning_Biomechanics).htm
@@ -57,7 +57,7 @@
   <div class="container nav-inner">
     <div class="brand">Yap Lab</div>
     <div class="menu">
-      <a class="backlink" href="/YapLab.htm">← Back to Main Page</a>
+      <a class="backlink" href="/index.html">← Back to Main Page</a>
       <a href="#cnn-reg">Overview</a>
       <a href="#vfs">PINN for VFS</a>
       <a href="#MRI">PINN for MRI</a>
