--- a/Research/research-3-1(Echocardiography_Image_Processing).htm
+++ b/Research/research-3-1(Echocardiography_Image_Processing).htm
@@ -62,7 +62,7 @@ body {
   <div class="container nav-inner">
     <div class="brand">Yap Lab</div>
     <div class="menu">
-      <a class="backlink" href="/YapLab.htm">← Back to Main Page</a>
+      <a class="backlink" href="/index.html">← Back to Main Page</a>
       <a href="#motivation">Motivation</a>
       <a href="#motion">Motion Estimation</a>
       <a href="#compounding">Compounding</a>
