--- a/Research/research-3-2(Virtual_Reality_Fetal_Echo).htm
+++ b/Research/research-3-2(Virtual_Reality_Fetal_Echo).htm
@@ -59,7 +59,7 @@ body {
   <div class="container nav-inner">
     <div class="brand">Yap Lab</div>
     <div class="menu">
-      <a class="backlink" href="/YapLab.htm">← Back to Main Page</a>
+      <a class="backlink" href="/index.html">← Back to Main Page</a>
       <a href="#overall">Overall</a>
       <a href="#normal">Normal Hearts</a>
       <a href="#tof">TOF</a>
