--- a/Research/research-4-1(Embryonic_Heart_Biomechanics).htm
+++ b/Research/research-4-1(Embryonic_Heart_Biomechanics).htm
@@ -58,7 +58,7 @@ body {
   <div class="container nav-inner">
     <div class="brand">Yap Lab</div>
     <div class="menu">
-      <a class="backlink" href="/YapLab.htm">← Back to Main Page</a>
+      <a class="backlink" href="/index.html">← Back to Main Page</a>
       <a href="#intro">Overall</a>
       <a href="#ultrasound">4D Ultrasound</a>
       <a href="#cfd-ventricle">CFD</a>
