--- a/Research/research-4-2(Zebrafish_Embryonic_Heart_Biomechanics).htm
+++ b/Research/research-4-2(Zebrafish_Embryonic_Heart_Biomechanics).htm
@@ -60,7 +60,7 @@ body {
   <div class="container nav-inner">
     <div class="brand">Yap Lab</div>
     <div class="menu">
-      <a class="backlink" href="/YapLab.htm">← Back to Main Page</a>
+      <a class="backlink" href="/index.html">← Back to Main Page</a>
       <a href="#intro">Overview</a>
       <a href="#fluid-trab">Fluid Mechanics</a>
       <a href="#tissue-trab">Tissue Mechanics</a>
