--- a/Research/research-1-1(Research_DeepLearningImageProcessing).htm
+++ b/Research/research-1-1(Research_DeepLearningImageProcessing).htm
@@ -74,7 +74,7 @@
     body {
       background: 
         linear-gradient(180deg, rgba(11,14,20,0.9), rgba(13,17,23,0.9)),
-        url("/Image/Imperial/IMPERIAL_Pattern_Reactive_6_varied_size_CMYK.png") repeat center center;
+        url("Image/Imperial/IMPERIAL_Pattern_Reactive_6_varied_size_CMYK.png") repeat center center;
       background-size: 1000px 800px;
     }
   </style>
@@ -87,7 +87,7 @@
     <div class="brand">Yap Lab</div>
     <div class="menu">
       <!-- Back to the main site; useful breadcrumb for deep-dive pages -->
-      <a class="backlink" href="/index.html">← Back to Main Page</a>
+      <a class="backlink" href="index.html">← Back to Main Page</a>
       <!-- In-page anchor links for quick jumping to each technique section -->
       <a href="#CNN">CNN</a>
       <a href="#FA">Feedback Attention</a>
