--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/x-icon" href="Image/Imperial/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./Image/Imperial/favicon.ico">
   <style>
     /* ===== Root & Base ===== */
     :root{--bg:#d2ddf3;--card:#778dbb;--muted:#9aa4b2;--fg:#fcfcfc;--border:#182e58;--primary:#ffffff;--accent:#a78bfa}
@@ -434,7 +434,7 @@
               <img class="mini-img" src="Image/Research/1-3.png" alt="Biomech Simulation" onerror="this.src='Image/Research/placeholder.jpg'">
               <p class="mini-desc">We develop deep learning frameworks, including PINNs and CFD-supervised networks, to rapidly estimate cardiovascular flow, myocardial stresses, and generate realistic aneurysm geometries for biomechanical analysis.</p>
               <div class="row"><span class="tag">PINN</span><span class="tag">CFD-supervised</span><span class="tag">Flow Simulation</span><span class="tag">Myocardial Stress</span><span class="tag">Aneurysm Geometry</span></div>
-              <div class="row"><a class="btn btn-small" href="/Research/research-1-3(Machine_Learning_Biomechanics).htm" target="_blank">Details ↗</a></div>
+              <div class="row"><a class="btn btn-small" href="Research/research-1-3(Machine_Learning_Biomechanics).htm" target="_blank">Details ↗</a></div>
             </div>
           </div>
         </div>
@@ -461,7 +461,7 @@
               <img class="mini-img" src="Image/Research/2-1.png" style="height:230px;width:auto;object-fit:cover;border-radius:10px;" alt="Heart Function Evaluation" onerror="this.src='Image/Research/placeholder.jpg'">
               <p class="mini-desc">EF correction to account for geometric remodelling improves prognostic power. We also investigated 2D vs 3D cardiac strains in fetal echo, explaining the variability and highlighting factors that cause disagreement.</p>
               <div class="row"><span class="tag">EF Correction</span><span class="tag">Prognostic Power</span><span class="tag">Echocardiography</span><span class="tag">Geometric Remodelling</span><span class="tag">2D vs 3D Strain</span></div>
-              <div class="row"><a class="btn btn-small" href="/Research/research-2-1(Heart_Function_Evaluation).htm" target="_blank">Details ↗</a></div>
+              <div class="row"><a class="btn btn-small" href="Research/research-2-1(Heart_Function_Evaluation).htm" target="_blank">Details ↗</a></div>
             </div>
 
             <!-- Mini card 2 -->
@@ -487,7 +487,7 @@
               <img class="mini-img" src="Image/Research/3-1.gif" style="height:240px;width:auto;object-fit:cover;border-radius:10px;" alt="Fetal Echo" onerror="this.src='Image/Research/placeholder.jpg'">
               <p class="mini-desc">We use advanced echocardiography image processing to study fetal heart growth, remodeling, and abnormalities, providing insights into congenital malformations and potential interventions.</p>
               <div class="row"><span class="tag">Fetal Heart</span><span class="tag">Echo</span><span class="tag">Image Processing</span></div>
-              <div class="row" style="margin-top:8px"><a class="btn btn-small" href="/Research/research-3-1(Echocardiography_Image_Processing).htm" target="_blank">Details ↗</a></div>
+              <div class="row" style="margin-top:8px"><a class="btn btn-small" href="Research/research-3-1(Echocardiography_Image_Processing).htm" target="_blank">Details ↗</a></div>
             </div>
 
             <!-- Mini card 2 -->
@@ -496,7 +496,7 @@
               <img class="mini-img" src="Image/Research/3-2.gif" alt="Fetal Biomechanics" onerror="this.src='Image/Research/placeholder.jpg'">
               <p class="mini-desc">Using CFD and finite element modelling, we simulate fetal heart biomechanics to understand growth, remodeling, and the mechanobiological mechanisms leading to malformations.</p>
               <div class="row"><span class="tag">CFD</span><span class="tag">Finite Element</span><span class="tag">Simulation</span></div>
-              <div class="row" style="margin-top:8px"><a class="btn btn-small" href="/Research/research-3-2(Virtual_Reality_Fetal_Echo).htm" target="_blank">Details ↗</a></div>
+              <div class="row" style="margin-top:8px"><a class="btn btn-small" href="Research/research-3-2(Virtual_Reality_Fetal_Echo).htm" target="_blank">Details ↗</a></div>
             </div>
 
             <!-- Mini card 3 -->
@@ -522,7 +522,7 @@
               <img class="mini-img" src="Image/Research/4-1.gif" style="height:300px;width:auto;object-fit:cover;border-radius:10px;" alt="Chick Heart" onerror="this.src='Image/Research/placeholder.jpg'">
               <p class="mini-desc">We study chick embryonic hearts, which develop from a tube into a 4-chamber structure by week 8, to understand biomechanical stimuli in early cardiac development.</p>
               <div class="row"><span class="tag">Embryonic</span><span class="tag">Chick</span><span class="tag">Heart Development</span></div>
-              <div class="row" style="margin-top:8px"><a class="btn btn-small" href="/Research/research-4-1(Embryonic_Heart_Biomechanics).htm" target="_blank">Details ↗</a></div>
+              <div class="row" style="margin-top:8px"><a class="btn btn-small" href="Research/research-4-1(Embryonic_Heart_Biomechanics).htm" target="_blank">Details ↗</a></div>
             </div>
 
             <!-- Mini card 2 -->
@@ -531,7 +531,7 @@
               <img class="mini-img" src="Image/Research/4-2.png" style="height:200px;width:auto;object-fit:cover;border-radius:10px;" alt="Zebrafish Heart" onerror="this.src='Image/Research/placeholder.jpg'">
               <p class="mini-desc">The zebrafish embryo is a well-studied animal model of embryonic heart development. We performed a careful characterization of the zebrafish embryonic hear biomechanics to understand it better. A similar approach to our other fetal and embryonic studies was adopted. We employed various high-resolution microscopy to scan the embryonic heart in 4D, apply our validated cardiac motion estimation algorithm to extract cardiac movements...</p>
               <div class="row"><span class="tag">Embryonic</span><span class="tag">Zebrafish</span><span class="tag">Biomechanics</span></div>
-              <div class="row" style="margin-top:8px"><a class="btn btn-small" href="/Research/research-4-2(Zebrafish_Embryonic_Heart_Biomechanics).htm" target="_blank">Details ↗</a></div>
+              <div class="row" style="margin-top:8px"><a class="btn btn-small" href="Research/research-4-2(Zebrafish_Embryonic_Heart_Biomechanics).htm" target="_blank">Details ↗</a></div>
             </div>
           </div>
         </div>
@@ -543,7 +543,7 @@
           <img class="mini-img" src="Image/Research/5-1.png" alt="Blood Pump" onerror="this.src='Image/Research/placeholder.jpg'">
           <p class="mini-desc">Blood pumps save countless lives every day, and include the implanted type (LVAD), those in the ICU (ECMO), and those in the surgical suite (heart-lung machine). However, they impose high stresses on blood and induce foreign surface reactions to cause thrombosis, and thromboembolic complications. We pursue various strategies and technologies to attain a blood pump with low blood damage. For example, we fabricate superhydrophobic and superhemophobic surfaces to enable slip flow in blood pump surfaces to reduce stresses, we seek new ways of pumping blood, such as using electro-active polymers and utilizing resonance in roller pumping.</p>
           <div class="row"><span class="tag">Blood Pump</span><span class="tag">LVAD</span><span class="tag">ECMO</span><span class="tag">Superhydrophobic</span></div>
-          <div class="row" style="margin-top:8px"><a class="btn btn-small" href="/Research/research-5(Blood_Pump).htm" target="_blank">Details ↗</a></div>
+          <div class="row" style="margin-top:8px"><a class="btn btn-small" href="Research/research-5(Blood_Pump).htm" target="_blank">Details ↗</a></div>
         </div>
 
         <!-- ===== Block 6: Hemostatic Materials ===== -->
@@ -562,7 +562,7 @@
           <img class="mini-img" src="Image/Research/7-1.png" alt="Placenta" onerror="this.src='Image/Research/placeholder.jpg'">
           <p class="mini-desc">The placenta is an important organ during pregnancy, whose health has great short- and long-term impact on the health of both the mother and the child. Pregnancy diseases such as Intrauterine Growth Restriction have surprisingly high prevalence and consequent mortality and morbidity, even in developed countries, and there is no proven method to prevent or treat the disease. We advocate that biomechanical approach to studying the placenta can provide new insights that can lead to better detection, diagnosis, and even treatment. Examples of our approach include mechanical testing and constitutive modelling on normal and diseased human placenta samples, investigating the use of elastography to detect placenta diseases, and image-based biomechanics simulations on placenta and umbilical blood vessels in health and disease.</p>
           <div class="row"><span class="tag">Placenta</span><span class="tag">IUGR</span><span class="tag">Biomechanics</span></div>
-          <div class="row" style="margin-top:8px"><a class="btn btn-small" href="/Research/research-7(Placenta_Biomechanics).htm" target="_blank">Details ↗</a></div>
+          <div class="row" style="margin-top:8px"><a class="btn btn-small" href="Research/research-7(Placenta_Biomechanics).htm" target="_blank">Details ↗</a></div>
         </div>
 
       </div>
