--- a/Research/research-1-3(Machine_Learning_Biomechanics).htm
+++ b/Research/research-1-3(Machine_Learning_Biomechanics).htm
@@ -45,7 +45,7 @@
     body {
       background: 
         linear-gradient(180deg, rgba(11,14,20,0.9), rgba(13,17,23,0.9)),
-        url("/Image/Imperial/IMPERIAL_Pattern_Reactive_6_varied_size_CMYK.png") repeat center center;
+        url("../Image/Imperial/IMPERIAL_Pattern_Reactive_6_varied_size_CMYK.png") repeat center center;
       background-size: 1000px 800px;
     }
   </style>
@@ -57,7 +57,7 @@
   <div class="container nav-inner">
     <div class="brand">Yap Lab</div>
     <div class="menu">
-      <a class="backlink" href="/index.html">← Back to Main Page</a>
+      <a class="backlink" href="../index.html">← Back to Main Page</a>
       <a href="#cnn-reg">Overview</a>
       <a href="#vfs">PINN for VFS</a>
       <a href="#MRI">PINN for MRI</a>
