--- a/Research/research-7(Placenta_Biomechanics).htm
+++ b/Research/research-7(Placenta_Biomechanics).htm
@@ -46,7 +46,7 @@ footer{border-top:1px solid var(--border);margin-top:28px;padding:22px 0;color:v
 body {
       background: 
         linear-gradient(180deg, rgba(11,14,20,0.9), rgba(13,17,23,0.9)),
-        url("/Image/Imperial/IMPERIAL_Pattern_Reactive_6_varied_size_CMYK.png") repeat center center;
+        url("../Image/Imperial/IMPERIAL_Pattern_Reactive_6_varied_size_CMYK.png") repeat center center;
       background-size: 1000px 800px;
     }
 </style>
@@ -58,7 +58,7 @@ body {
   <div class="container nav-inner">
     <div class="brand">Yap Lab</div>
     <div class="menu">
-      <a class="backlink" href="/index.html">← Back to Main Page</a>
+      <a class="backlink" href="../index.html">← Back to Main Page</a>
       <a href="#overview">Overview</a>
       <a href="#iugr">IUGR</a>
       <a href="#mech-prop">Mechanical Properties</a>
