--- a/Research/research-4-2(Zebrafish_Embryonic_Heart_Biomechanics).htm
+++ b/Research/research-4-2(Zebrafish_Embryonic_Heart_Biomechanics).htm
@@ -48,7 +48,7 @@ footer{border-top:1px solid var(--border);margin-top:28px;padding:22px 0;color:v
 body {
       background: 
         linear-gradient(180deg, rgba(11,14,20,0.9), rgba(13,17,23,0.9)),
-        url("/Image/Imperial/IMPERIAL_Pattern_Reactive_6_varied_size_CMYK.png") repeat center center;
+        url("../Image/Imperial/IMPERIAL_Pattern_Reactive_6_varied_size_CMYK.png") repeat center center;
       background-size: 1000px 800px;
     }
 </style>
@@ -60,7 +60,7 @@ body {
   <div class="container nav-inner">
     <div class="brand">Yap Lab</div>
     <div class="menu">
-      <a class="backlink" href="/index.html">← Back to Main Page</a>
+      <a class="backlink" href="../index.html">← Back to Main Page</a>
       <a href="#intro">Overview</a>
       <a href="#fluid-trab">Fluid Mechanics</a>
       <a href="#tissue-trab">Tissue Mechanics</a>
